// Vitest Snapshot v1

exports[`Swiper > :props > :animation fade 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-fade"
    >
      <div
        class="t-swiper__container"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :autoplay 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :defaultCurrent 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :direction 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside t-swiper--vertical"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(0, -0%, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :duration 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :height 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :interval 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :loop 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :navigation 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--outside t-swiper--large"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :theme 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > :props > :type 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content t-swiper-card"
    >
      <div
        class="t-swiper__container"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
  </div>
</div>
`;

exports[`Swiper > additional function > navigation: VNode 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <div>
      123
    </div>
    <div
      class="t-swiper__arrow t-swiper__arrow--default"
    >
      <div
        class="t-swiper__arrow-left"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-left"
          >
            <path
              d="M14.5 17.5L9 12L14.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-swiper__arrow-right"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Swiper > additional function > no valid panel 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__wrap t-swiper--inside"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__container"
        style="transform: translate3d(-0%, 0px, 0px);"
      />
    </div>
    <ul
      class="t-swiper__navigation t-swiper__navigation-bars"
    />
    <div
      class="t-swiper__arrow t-swiper__arrow--default"
    >
      <div
        class="t-swiper__arrow-left"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-left"
          >
            <path
              d="M14.5 17.5L9 12L14.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <div
        class="t-swiper__arrow-right"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
